Re-add anchors to nav for easier active states

--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,7 @@ section {
 }
 
 .navbar__menu .menu__link {
-  /* display: block; */
+  display: block;
   padding: 1em;
   font-weight: bold;
   text-decoration: none;
