Add active state with styling to nav bar

--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,11 @@ section {
   transition: ease 0.3s all;
 }
 
+.activeNav {
+  background: #999;
+  transition: ease 0.3s all;
+}
+
 /* Header Styles */
 .page__header {
   background: #fff;
