--- a/css/styles.css
+++ b/css/styles.css
@@ -11,11 +11,9 @@
 /* ---- Base Rules ---- */
 body {
   background: rgb(136, 203, 171);
-  background: linear-gradient(
-    0deg,
-    rgba(136, 203, 171, 1) 0%,
-    rgba(0, 13, 60, 1) 100%
-  );
+  background: linear-gradient(0deg,
+      rgba(136, 203, 171, 1) 0%,
+      rgba(0, 13, 60, 1) 100%);
   margin: 0;
   font-family: "Merriweather", serif;
   color: #fff;
@@ -153,11 +151,9 @@ section:nth-of-type(odd) .landing__container::before {
 section:nth-of-type(even) .landing__container::before {
   content: "";
   background: rgb(255, 255, 255);
-  background: linear-gradient(
-    0deg,
-    rgba(255, 255, 255, 0.1) 0%,
-    rgba(255, 255, 255, 0.2) 100%
-  );
+  background: linear-gradient(0deg,
+      rgba(255, 255, 255, 0.1) 0%,
+      rgba(255, 255, 255, 0.2) 100%);
   position: absolute;
   top: 3em;
   right: 3em;
@@ -172,11 +168,9 @@ section:nth-of-type(even) .landing__container::before {
 section:nth-of-type(3n) .landing__container::after {
   content: "";
   background: rgb(255, 255, 255);
-  background: linear-gradient(
-    0deg,
-    rgba(255, 255, 255, 0.1) 0%,
-    rgba(255, 255, 255, 0.2) 100%
-  );
+  background: linear-gradient(0deg,
+      rgba(255, 255, 255, 0.1) 0%,
+      rgba(255, 255, 255, 0.2) 100%);
   position: absolute;
   right: 0;
   bottom: 0;
@@ -191,11 +185,9 @@ section:nth-of-type(3n) .landing__container::after {
 section:nth-of-type(3n + 1) .landing__container::after {
   content: "";
   background: rgb(255, 255, 255);
-  background: linear-gradient(
-    0deg,
-    rgba(255, 255, 255, 0.1) 0%,
-    rgba(255, 255, 255, 0.2) 100%
-  );
+  background: linear-gradient(0deg,
+      rgba(255, 255, 255, 0.1) 0%,
+      rgba(255, 255, 255, 0.2) 100%);
   position: absolute;
   right: 20vw;
   bottom: -5em;
@@ -212,11 +204,9 @@ section:nth-of-type(3n + 1) .landing__container::after {
 /* Note: your-active-class class is applied through javascript. You should update the class here and in the index.html to what you set in your javascript file.  */
 section.active {
   background: rgb(0, 0, 0);
-  background: linear-gradient(
-    0deg,
-    rgba(0, 0, 0, 0.1) 100%,
-    rgba(0, 0, 0, 0) 100%
-  );
+  background: linear-gradient(0deg,
+      rgba(0, 0, 0, 0.1) 100%,
+      rgba(0, 0, 0, 0) 100%);
 }
 
 section.active h2 {
@@ -242,6 +232,7 @@ section.active .landing__container::after {
   from {
     transform: rotate(0deg) translate(-1em) rotate(0deg);
   }
+
   to {
     transform: rotate(360deg) translate(-1em) rotate(-360deg);
   }
